--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     name: CouturePro
 
   datasource:
-    url : jdbc:postgresql://localhost:5432/couture-pro
-    username: postgres
-    password: 12345678
+    url: ${JDBC_DATABASE_URL}
+    username: ${JDBC_DATABASE_USERNAME}
+    password: ${JDBC_DATABASE_PASSWORD}
     driver-class-name : org.postgresql.Driver
   jpa:
     hibernate:
